--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <title>Calculadora IMC</title>
 </head>
 <body>
-    Prueba
+    
+    <script src="./js/main.js"></script>
 </body>
 </html>
