Creando la parte del html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Calculadora IMC</title>
 </head>
 <body>
+    <div class="wrapper">
+        <p>Altura en cm: 
+            <input type="number" id="altura"><br><span id="ErrorAltura"></span>
+        </p>
+        <p>Peso en kg:
+            <input type="number" id="peso"><br><span id="ErrorPeso"></span>
+        </p>
+        <button id="boton">Calcular</button>
+        <p id="resultado"></p>
+    </div>
     
     <script src="./js/main.js"></script>
 </body>
