--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calculadora IMC</title>
 </head>
 <body>
+    <h1>CALCULA TU IMC</h1>
     <div class="wrapper">
         <p>Altura en cm: 
             <input type="number" id="altura"><br><span id="ErrorAltura"></span>
