Creo la calculadora en js

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>CALCULA TU IMC</h1>
     <div class="wrapper">
         <p>Altura en cm: 
-            <input type="number" id="altura"><br><span id="ErrorAltura"></span>
+            <input type="text" id="altura"><br><span id="ErrorAltura"></span>
         </p>
         <p>Peso en kg:
-            <input type="number" id="peso"><br><span id="ErrorPeso"></span>
+            <input type="text" id="peso"><br><span id="ErrorPeso"></span>
         </p>
         <button id="boton">Calcular</button>
         <p id="resultado"></p>
